--- a/app/src/main/res/layout/activity_nuevo_gasto.xml
+++ b/app/src/main/res/layout/activity_nuevo_gasto.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/idTextNombre"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
