--- a/app/src/main/res/layout/activity_nuevo_gasto.xml
+++ b/app/src/main/res/layout/activity_nuevo_gasto.xml
@@ -149,10 +149,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idTextTipoDeCargo" />
+        app:layout_constraintTop_toBottomOf="@+id/idCheckEsGastoFijo" />
 
     <CheckBox
-        android:id="@+id/idTextTipoDeCargo"
+        android:id="@+id/idCheckEsGastoFijo"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="40dp"
