--- a/app/src/main/res/layout/activity_nuevo_gasto.xml
+++ b/app/src/main/res/layout/activity_nuevo_gasto.xml
@@ -49,6 +49,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="40dp"
         android:background="@drawable/edittext_rounded_corners"
+        app:hintAnimationEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/idTextNombre">
