Ajustes visuales en pantalla home y nuevoGasto

--- a/app/src/main/res/layout/activity_nuevo_gasto.xml
+++ b/app/src/main/res/layout/activity_nuevo_gasto.xml
@@ -69,9 +69,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:layout_weight="1"
+                        android:gravity="center"
                         android:hint="Monto*"
                         android:inputType="none|numberDecimal"
                         android:padding="16dp"
+                        android:textAlignment="center"
                         android:textColor="#000000" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -87,6 +89,7 @@
                     android:fontFamily="@font/lekton"
                     android:hint="Link de cancelacion*"
                     android:inputType="textPersonName"
+                    android:textAlignment="center"
                     android:textColor="#000000"
                     android:textColorHint="#737272"
                     android:textSize="20sp"
@@ -106,6 +109,7 @@
                     android:fontFamily="@font/lekton"
                     android:hint="Nombre*"
                     android:inputType="textPersonName"
+                    android:textAlignment="center"
                     android:textColor="#000000"
                     android:textColorHint="#737272"
                     android:textSize="20sp"
@@ -139,6 +143,7 @@
                     android:fontFamily="@font/lekton"
                     android:hint="Fecha Proximo Pago"
                     android:inputType="date"
+                    android:textAlignment="center"
                     android:textColor="#000000"
                     android:textColorHint="#737272"
                     android:textSize="20sp"
@@ -157,6 +162,7 @@
                     android:fontFamily="@font/lekton"
                     android:hint="Ingrese valor"
                     android:inputType="date"
+                    android:textAlignment="center"
                     android:textColor="#000000"
                     android:textColorHint="#737272"
                     android:textSize="20sp"
@@ -197,6 +203,7 @@
                     android:fontFamily="@font/lekton"
                     android:hint="Detalle*"
                     android:inputType="textPersonName"
+                    android:textAlignment="center"
                     android:textColor="#000000"
                     android:textColorHint="#737272"
                     android:textSize="20sp"
@@ -226,6 +233,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="40dp"
                     android:background="@drawable/edittext_rounded_corners"
+                    android:gravity="center"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/idtiempoEntreVencimientos"
                     app:layout_constraintTop_toBottomOf="@+id/textView4" />
