--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,14 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/action_filtro"
-        android:orderInCategory="100"
-        android:title="Filtrar"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_quitar_filtro"
-        android:orderInCategory="100"
-        android:title="Eliminar Filtros"
-        app:showAsAction="never" />
-</menu>
+    xmlns:app="http://schemas.android.com/apk/res-auto"/>
