--- a/app/src/main/res/layout/activity_guide_one.xml
+++ b/app/src/main/res/layout/activity_guide_one.xml
@@ -16,33 +16,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="209dp"
-        android:layout_height="210dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/onboarding_third_text2"
-        app:srcCompat="@drawable/ic_2_guide_1" />
-
     <TextView
         android:id="@+id/onboarding_third_text3"
-        android:layout_width="320dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="385dp"
+        android:layout_height="106dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/lekton"
         android:gravity="center"
-        android:text="2. Ingresá los datos  mas relevantes de  tus gastos."
+        android:text="Como cargar tus gastos:"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:circularflow_radiusInDP="90"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.703"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/onboarding_third_text2"
@@ -65,7 +55,7 @@
         android:id="@+id/bt_guide_one"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:width="200dp"
         android:height="55dp"
         android:backgroundTint="#FFFFFF"
@@ -78,16 +68,18 @@
         android:textStyle="bold"
         app:cornerRadius="50dp"
         app:iconTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/onboarding_third_text3" />
+        app:layout_constraintTop_toBottomOf="@+id/onboarding_third_text2" />
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="209dp"
         android:layout_height="210dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view7"
+        app:layout_constraintTop_toBottomOf="@+id/onboarding_third_text3"
         app:srcCompat="@drawable/ic_1_guide_1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
