--- a/app/src/main/res/layout/activity_instrucciones_de_cancelacion.xml
+++ b/app/src/main/res/layout/activity_instrucciones_de_cancelacion.xml
@@ -42,7 +42,7 @@
             <TextView
                 android:id="@+id/textViewInstrucciones"
                 android:layout_width="354dp"
-                android:layout_height="346dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="20dp"
                 android:fontFamily="@font/lekton"
@@ -68,7 +68,7 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="5dp"
                 android:width="200dp"
                 android:height="55dp"
                 android:backgroundTint="#FFFFFF"
