--- a/app/src/main/res/layout/activity_guide_two.xml
+++ b/app/src/main/res/layout/activity_guide_two.xml
@@ -65,17 +65,17 @@
 
     <Button
         android:id="@+id/bt_guide_two"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="210dp"
+        android:layout_height="65dp"
         android:width="200dp"
         android:height="55dp"
         android:backgroundTint="#FFFFFF"
         android:fontFamily="@font/lekton"
         android:shadowDy="4"
         android:shadowRadius="4"
-        android:text="Continuar"
+        android:text="Ya casi estamos!"
         android:textColor="#645CA9"
-        android:textSize="25dp"
+        android:textSize="19sp"
         android:textStyle="bold"
         app:cornerRadius="50dp"
         app:iconTint="#FFFFFF"
