--- a/app/src/main/res/layout/activity_instrucciones_de_cancelacion.xml
+++ b/app/src/main/res/layout/activity_instrucciones_de_cancelacion.xml
@@ -43,7 +43,9 @@
                 android:id="@+id/textViewInstrucciones"
                 android:layout_width="354dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="50dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="20dp"
                 android:fontFamily="@font/lekton"
                 android:gravity="center|left"
