--- a/app/src/main/res/layout/list_element_cargo.xml
+++ b/app/src/main/res/layout/list_element_cargo.xml
@@ -43,7 +43,7 @@
 
                 <LinearLayout
                     android:id="@+id/linearLayout2"
-                    android:layout_width="273dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="2dp"
@@ -121,7 +121,7 @@
 
                     <TextView
                         android:id="@+id/monedaActualTextView2"
-                        android:layout_width="100dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/lekton"
                         android:gravity="center"
