Ajustes texto card gastos mensuales

--- a/app/src/main/res/layout/card_monto_mensual.xml
+++ b/app/src/main/res/layout/card_monto_mensual.xml
@@ -26,7 +26,7 @@
                 android:layout_height="36dp"
                 android:fontFamily="@font/lekton"
                 android:gravity="center"
-                android:text="Monto Mensual"
+                android:text="Gastos del Mes:"
                 android:textColor="#FFFFFF"
                 android:textSize="26dp"
                 android:textStyle="bold" />
